fixed a lot svg icon

--- a/src/blocks/footer.html
+++ b/src/blocks/footer.html
@@ -29,14 +29,26 @@
 				</nav>
 				<div class="follow">
 					<h4 class="footNav__Head">Follow us </h4>
-					<div class="follow__icon">
-						<a href="#" class="follow__link icon-facebook">
+					<div class="follow__icons">
+						<a href="#" class="follow__link ">
+							<svg class="icon-fol">
+								<use xlink:href="image/duhoot_sprite.svg#facebook_icon"></use>
+							</svg>
 						</a>
-						<a href="#" class="follow__link icon-twitter">
+						<a href="#" class="follow__link">
+							<svg class="icon-fol">
+								<use xlink:href="image/duhoot_sprite.svg#twiter_icon"></use>
+							</svg>
 						</a>
-						<a href="#" class="follow__link icon-googleplus">
+						<a href="#" class="follow__link ">
+							<svg class="icon-fol">
+								<use xlink:href="image/duhoot_sprite.svg#plus_icon"></use>
+							</svg>
 						</a>
-						<a href="#" class="follow__link icon-youtube">
+						<a href="#" class="follow__link ">
+							<svg class="icon-fol">
+								<use xlink:href="image/duhoot_sprite.svg#youtube_icon"></use>
+							</svg>
 						</a>
 					</div>
 					<p class="copyright">Copyright © All Rights reserved</p>
