--- a/src/blocks/header.html
+++ b/src/blocks/header.html
@@ -1,7 +1,10 @@
 <div class="case" >
 	<header class="header">
 		<div class=" container header__container ">
-			<a href="#" class="logo header__logo"></a>
+				<!-- <svg class="search__icon">
+					<use xlink:href="image/duhoot_sprite.svg#logo_icon"></use>
+			 	</svg> -->
+			<a href="https://poliakh.github.io/myportfolio/site/duhoot/" class="logo header__logo"></a>
 			<nav class="nav header__nav">
 				<ul class="nav__menu">
 					<li class="nav__item">
@@ -29,6 +32,10 @@
 				</div>
 				
 				<div class="login">
+					<svg class="login__human">
+						<use xlink:href="image/duhoot_sprite.svg#human_icon"></use>
+					</svg>
+
 					<input class="login--input " type="text" name="text" placeholder="LOGIN"/>
 				</div>
 			</div>
