--- a/src/blocks/input_sprite_exemple.html
+++ b/src/blocks/input_sprite_exemple.html
@@ -15,6 +15,9 @@
 		<use xlink:href="image/duhoot_sprite.svg#cap_icon"></use>
 	</svg>
 	<svg class="iconSprite">
+		<use xlink:href="image/duhoot_sprite.svg#human_icon"></use>
+	</svg>
+	<svg class="iconSprite">
 		<use xlink:href="image/duhoot_sprite.svg#flash_icon"></use>
 	</svg>
 	<svg class="iconSprite">
@@ -26,6 +29,27 @@
 	<svg class="iconSprite">
 		<use xlink:href="image/duhoot_sprite.svg#leaf_icon"></use>
 	</svg>
+	<svg class="iconSprite">
+		<use xlink:href="image/duhoot_sprite.svg#geo_icon"></use>
+	</svg>
+	<svg class="iconSprite">
+		<use xlink:href="image/duhoot_sprite.svg#arrow_icon"></use>
+	</svg>
+
+<!-- 	social -->
+---
+	<svg class="iconSprite">
+		<use xlink:href="image/duhoot_sprite.svg#facebook_icon"></use>
+	</svg>
+	<svg class="iconSprite">
+		<use xlink:href="image/duhoot_sprite.svg#plus_icon"></use>
+	</svg>
+	<svg class="iconSprite">
+		<use xlink:href="image/duhoot_sprite.svg#twiter_icon"></use>
+	</svg>
+	<svg class="iconSprite">
+		<use xlink:href="image/duhoot_sprite.svg#youtube_icon"></use>
+	</svg>
 
 <!-- star -->
 	<svg class="starIcon">
@@ -34,6 +58,7 @@
 	<svg class="starIcon starFill">
 		<use xlink:href="image/duhoot_sprite.svg#star_icon"></use>
 	</svg>
+
 </div>	
 <style>
 .exper{
@@ -54,12 +79,13 @@
 	stroke:#ea9e2b;
 	stroke-width:0.36252287;
 	stroke-linecap:round;
-	&:hover{
-		fill:#ea9e2b;
-		stroke:#ea9e2b*1.2;
-
-	}
 }
+
+starIcon:hover{
+	fill:#ea9e2b;
+	stroke:#ea9e2b*1.2;
+}
+
 .starFill{
 	fill:#ea9e2b;
 	stroke:#ea9e2b;
