--- a/src/blocks/main.html
+++ b/src/blocks/main.html
@@ -21,7 +21,11 @@
 			//= card_large_party.html
 		</div>
 		<div class="offers__border">
-			<a href="#" class="more offers__more">Load more</a>
+			<div href="#" class="more offers__more">Load more
+				<svg class="arrow_icon">
+					<use xlink:href="image/duhoot_sprite.svg#arrow_icon"></use>
+				</svg>
+			</div>
 		</div>
 	</div>
 </div>
