--- a/src/blocks/panelFilter.html
+++ b/src/blocks/panelFilter.html
@@ -18,7 +18,11 @@
 				</ul>
 				<input class="input_d" type="hidden"/>
 			</div>
-			<button class="button butSelelct__button-filt" type="submit">hide map</button>
+			<button class="button butSelelct__button-filt" type="submit">hide map
+				<svg class="icon_geo">
+					<use xlink:href="image/duhoot_sprite.svg#geo_icon"></use>
+				</svg>
+			</button>
 		</div>
 
 		<div class="filterBut">
