--- a/src/blocks/svgSprite.html
+++ b/src/blocks/svgSprite.html
@@ -1,4 +1,8 @@
-<svg xmlns="http://www.w3.org/2000/svg"
+
+
+
+
+<!-- <svg xmlns="http://www.w3.org/2000/svg"
 	xmlns:xlink="http://www.w3.org/1999/xlink">
 	<symbol id="note_icon" viewBox="0 0 500.0 500.0">
 		<path
@@ -49,3 +53,4 @@
 	</symbol>
 </svg>
 
+ -->
