fixed a lot svg icon

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Duhoot</title>
-	<link rel="icon" type="image/png" href="./image/icon/logo_icon_16х16.png" sizes="16x16" />
-	<link rel="icon" type="image/png" href="./image/icon/logo_icon_32х32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="./image/logo_icon_16х16.png" sizes="16x16" />
+	<link rel="icon" type="image/png" href="./image/logo_icon_32х32.png" sizes="32x32" />
 	
 	<!-- <link rel="stylesheet" href="css/normalize.css"> -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css">
@@ -14,14 +14,16 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<!-- //= blocks/input_sprite_exemple.html -->
 	//= blocks/header.html
 	//= blocks/banner.html
 	//= blocks/panelFilter.html
 	//= blocks/main.html
 	//= blocks/reality.html
 	//= blocks/footer.html
-	<!-- //= locks/svgSprite.html
-	 -->
+	<!-- //= locks/svgSprite.html -->
+	
+
 	<script src="script/script.js"></script>
 
 </body>
